# KubeAICO

./: .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/analyzer/: __init__.py  adapters.py  rules.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: __init__.py  ai.py  alerts.py  audit.py  auth.py  clusters.py  metrics.py  overview.py  resources.py
backend/app/collector/: __init__.py  kubernetes.py  prometheus.py
backend/app/core/: config.py  security.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/repository/: __init__.py  ai_task.py  audit.py  cluster.py  user.py
backend/app/schemas/: __init__.py  ai.py  alerts.py  audit.py  auth.py  cluster.py  metrics.py  overview.py  resource.py
backend/app/service/: __init__.py  ai.py  alerts.py  audit.py  cluster.py  metrics.py  overview.py  resources.py
backend/kubeaico_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_api_smoke.py  test_cluster_management.py  test_resource_detail_and_audit.py  test_rules_engine.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: main.js  main.ts
frontend/src/assets/: styles.css
frontend/src/components/: AppShell.vue  AppShell.vue.js  MetricCard.vue  MetricCard.vue.js  SideNav.vue  SideNav.vue.js  TrendChart.vue  TrendChart.vue.js
frontend/src/router/: index.js  index.ts
frontend/src/services/: api.js  api.ts
frontend/src/stores/: auth.js  auth.ts
(+14 files in other folders)
